force-app/main/default/objects/QuarterlyReportSettings__mdt/QuarterlyReportSettings__mdt.object-meta.xml
<CustomObject>
    <label>QuarterlyReportSettings</label>
    <pluralLabel>QuarterlyReportSettings</pluralLabel>
</CustomObject>