force-app/main/default/objects/QuarterlyReportSettings__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this record is active</description>
    <inlineHelpText>Indicates whether this record is active</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>