force-app/main/default/objects/QuarterlyReportSettings__mdt/fields/LastQuarterReportMissingCardEligibility__c.field-meta.xml
<CustomField>
    <fullName>LastQuarterReportMissingCardEligibility__c</fullName>
    <description>Indicates the number of days from the end of last quarter until when the &apos;Last Quarter Report Missing Card&apos; should be displayed.</description>
    <inlineHelpText>Indicates the number of days from the end of last quarter until when the &apos;Last Quarter Report Missing Card&apos; should be displayed.</inlineHelpText>
    <label>LastQuarterReportMissingCardEligibility</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>