force-app/main/default/objects/QuarterlyReportSettings__mdt/fields/ThisQuarterReportMissingCardEligibility__c.field-meta.xml
<CustomField>
    <fullName>ThisQuarterReportMissingCardEligibility__c</fullName>
    <description>Indicates the number of days from the end of current quarter, from when the &apos;Current Quarter Report Missing Card&apos; should be displayed.</description>
    <inlineHelpText>Indicates the number of days from the end of current quarter, from when the &apos;Current Quarter Report Missing Card&apos; should be displayed.</inlineHelpText>
    <label>ThisQuarterReportMissingCardEligibility</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>